--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <p class="text-emerald-500">
       Powered by <a href="https://vitejs.dev/guide">Vite</a>
     </p>
+    <h1 class="bg-black">hej</h1>
     <img src="img/vite.svg" alt="Vite Logo" />
 
     <script type="module" src="./main.js"></script>
