--- a/src/index.html
+++ b/src/index.html
@@ -2,157 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orienta&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sansita&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <header>
-    <article>
-      <section class="navigation_mobil">
-        <div>
-          <button>
-            <a href="">
-              <img
-                class="logo_kort"
-                id="sort"
-                src="img/logo/bb_logo_kort.png"
-                alt=""
-              />
-              <img
-                class="logo_kort"
-                id="sol"
-                src="img/logo/bb_logo_kort_sol.png"
-                alt=""
-              />
-              <img
-                class="logo_kort"
-                id="graes"
-                src="img/logo/bb_logo_kort_graes.png"
-                alt=""
-              />
-              <img
-                class="logo_kort"
-                id="himmel"
-                src="img/logo/bb_logo_kort_himmel.png"
-                alt=""
-              />
-              <img
-                class="logo_kort"
-                id="rust"
-                src="img/logo/bb_logo_kort_rust.png"
-                alt=""
-              />
-            </a>
-          </button>
-        </div>
-        <div>
-          <button class="toggle-btn">
-            <img class="burger_ikon" src="img/burger_menu.svg" alt="" />
-          </button>
-        </div>
-      </section>
-  <body class="grid place-items-center p-8">
-    <h1 class="text-xl font-bold text-emerald-700">Tailwind Template E2022</h1>
-    <p class="text-emerald-500">
-      Powered by <a href="https://vitejs.dev/guide">Vite</a>
-    </p>
-    <h1 class="bg-yellow-700">hej</h1>
-    <img src="img/vite.svg" alt="Vite Logo" />
-
-      <section class="navigation_desktop">
-        <div class="logo_center">
-          <a class="hej" href=""></a>
-          <img
-            class="logo_lang"
-            id="sort"
-            src="img/logo/bb_logo_lang.png"
-            alt=""
-          />
-          <img
-            class="logo_lang_sol"
-            id="sol"
-            src="img/logo/bb_logo_lang_sol.png"
-            alt=""
-          />
-          <img
-            class="logo_lang_graes"
-            id="graes"
-            src="img/logo/bb_logo_lang.png"
-            alt=""
-          />
-          <img
-            class="logo_lang_himmel"
-            id="himmel"
-            src="img/logo/bb_logo_lang_himmel.png"
-            alt=""
-          />
-          <img
-            class="logo_lang_rust"
-            id="rust"
-            src="img/logo/bb_logo_lang_rust.png"
-            alt=""
-          />
-        </div>
-        <div class="navigation_under_logo">
-          <nav>
-            <ul class="main_nav">
-              <li>
-                <a href="abonnement.html">Abonnement</a>
-              </li>
-              <div class="sortiment_pil">
-                <li>Sortiment</li>
-                <img src="/img/pil_ned_1.svg" alt="" />
-              </div>
-              <li>Begivenheder</li>
-              <li>Kontakt os</li>
-            </ul>
-          </nav>
-          <nav>
-            <ul class="secondary_nav">
-              <li><img class="person" src="img/person.svg" alt="" /></li>
-              <li>
-                <img class="shopping" src="img/shopping_bag.svg" alt="" />
-              </li>
-              <li><img class="search" src="img/search.svg" alt="" /></li>
-            </ul>
-          </nav>
-        </div>
-      </section>
-    </article>
-  </header>
   <body>
-    <section>
-      <img src="img/logo/bb_ill_sol.png" alt="" />
-      <h1>Bring sæsonnen hjem til dig</h1>
-      <p>
-        Med et abonnement hos Blomster Bjarne får du leveret unikke buketter fra
-        hver sæson.
-      </p>
-      <button>Tegn dit abonnement</button>
-    </section>
-    <section>
-      <h2>Hvem er vi?</h2>
-      <h5>Hos Blomster Bjarne fejrer vi alt, hvad der er smukt!</h5>
-      <p>
-        Blomster Bjarne udspringer ud fra et kærligt minde om vores grundlægger
-        – at sælge blomster er en del af vores DNA. Vores ønske at forkæle og
-        lade dig vare en del at dette univers. Kald det et slags ‘menageri’,
-        hvor du kommer ind i vores florale univers – gennem et væld af blomster
-        i alverdens flimrende farver, alle unikke i deres enkelte karakter. Tag
-        forbi en af vores butikker eller se dig om på hjemmesiden efter netop
-        den vase eller den blomst, der skal være en del af dit enestående hjem.
-      </p>
-      <button>Se vores udvalg af blomster</button>
-    </section>
-    <section>
-      <img src="img/" alt="" />
-    </section>
-    <section>
-      <img src="img/sollys_ikon.svg" alt="" />
-      <img src="img/" alt="" />
-      <img src="img/sollys_ikon.svg" alt="" />
-      <img src="img/sollys_ikon.svg" alt="" />
-    </section>
-    <script type="module" src="./main.js"></script>
+    <header></header>
+    <main>
+      <a href="abonnement.hmtl">abonnement</a>
+    </main>
+    <footer></footer>
+    <script></script>
   </body>
 </html>
