--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,114 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main>
-      <a href="abonnement.hmtl">abonnement</a>
-    </main>
+    <header>
+      <article>
+        <section class="navigation_mobil">
+          <div>
+            <button>
+              <a href="">
+                <img
+                  class="logo_kort"
+                  id="sort"
+                  src="img/logo/bb_logo_kort.png"
+                  alt=""
+                />
+                <img
+                  class="logo_kort"
+                  id="sol"
+                  src="img/logo/bb_logo_kort_sol.png"
+                  alt=""
+                />
+                <img
+                  class="logo_kort"
+                  id="graes"
+                  src="img/logo/bb_logo_kort_graes.png"
+                  alt=""
+                />
+                <img
+                  class="logo_kort"
+                  id="himmel"
+                  src="img/logo/bb_logo_kort_himmel.png"
+                  alt=""
+                />
+                <img
+                  class="logo_kort"
+                  id="rust"
+                  src="img/logo/bb_logo_kort_rust.png"
+                  alt=""
+                />
+              </a>
+            </button>
+          </div>
+          <div>
+            <button class="toggle-btn">
+              <img class="burger_ikon" src="img/burger_menu.svg" alt="" />
+            </button>
+          </div>
+        </section>
+
+        <section class="navigation_desktop">
+          <div class="logo_center">
+            <a class="hej" href=""></a>
+            <img
+              class="logo_lang"
+              id="sort"
+              src="img/logo/bb_logo_lang.png"
+              alt=""
+            />
+            <img
+              class="logo_lang_sol"
+              id="sol"
+              src="img/logo/bb_logo_lang_sol.png"
+              alt=""
+            />
+            <img
+              class="logo_lang_graes"
+              id="graes"
+              src="img/logo/bb_logo_lang.png"
+              alt=""
+            />
+            <img
+              class="logo_lang_himmel"
+              id="himmel"
+              src="img/logo/bb_logo_lang_himmel.png"
+              alt=""
+            />
+            <img
+              class="logo_lang_rust"
+              id="rust"
+              src="img/logo/bb_logo_lang_rust.png"
+              alt=""
+            />
+          </div>
+          <div class="navigation_under_logo">
+            <nav>
+              <ul class="main_nav">
+                <li>
+                  <a href="abonnement.html">Abonnement</a>
+                </li>
+                <div class="sortiment_pil">
+                  <li>Sortiment</li>
+                  <img src="/img/pil_ned_1.svg" alt="" />
+                </div>
+                <li>Begivenheder</li>
+                <li>Kontakt os</li>
+              </ul>
+            </nav>
+            <nav>
+              <ul class="secondary_nav">
+                <li><img class="person" src="img/person.svg" alt="" /></li>
+                <li>
+                  <img class="shopping" src="img/shopping_bag.svg" alt="" />
+                </li>
+                <li><img class="search" src="img/search.svg" alt="" /></li>
+              </ul>
+            </nav>
+          </div>
+        </section>
+      </article>
+    </header>
+    <main></main>
     <footer></footer>
     <script></script>
   </body>
