--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -5,6 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orienta&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sansita&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main>
+      <div>
+        <p>Køb dine blomster i vores butikker</p>
+        <p>Bestil dit abonnement på vores webshop</p>
+      </div>
+
+      <!---------------------------------------------- HERO -->
+      <section class="">
+        <div class="hero_content">
+          <h1 class="text-sol">Abonnement</h1>
+          <p>
+            Udlevering vil finde sted om torsdagen inden for arbejdstiden. * Du
+            vil blive opkrævet en engangsbetaling på 20 DKK. depositum for
+            leveringsspanden.
+          </p>
+          <p>
+            * Billederne er blot en repræsentation af, hvad spanden kunne
+            indeholde til prisen. Typerne af blomster kan variere afhængigt af
+            sæsonen.
+          </p>
+        </div>
+        <div class="hero_pil">
+          <svg class="pil" width="32" height="32" viewBox="0 0 24 24">
+            <path
+              fill="currentColor"
+              d="m20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8l8-8z"
+            ></path>
+          </svg>
+        </div>
+      </section>
+
+      <!---------------------------------------------- FØRSTE SEKTION -->
+      <section>
+        <h2>Hvem er vi?</h2>
+      </section>
+    </main>
+    <footer></footer>
+    <script></script>
+  </body>
 </html>
