--- a/src/index.html
+++ b/src/index.html
@@ -865,17 +865,13 @@
     </header>
     <main>
       <section class="baggrundsbillede">
-        <div class="farve bg-color-headings">
-          <img src="img/logo/bb_ill_sol.png" alt="" />
-          <h1 class="text-h1-mobile text-sol-300">
-            Bring sæsonnen hjem til dig
-          </h1>
-          <p>
-            Med et abonnement hos Blomster Bjarne får du leveret unikke buketter
-            fra hver sæson.
-          </p>
-          <button>Tegn mit abonnement</button>
-        </div>
+        <img src="img/logo/bb_ill_sol.png" alt="" />
+        <h1 class="text-h1-mobile text-sol-300">Bring sæsonnen hjem til dig</h1>
+        <p>
+          Med et abonnement hos Blomster Bjarne får du leveret unikke buketter
+          fra hver sæson.
+        </p>
+        <button>Tegn mit abonnement</button>
       </section>
       <section>
         <h2>Hvem er vi?</h2>
