--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     <style>
       .baggrundsbillede {
         background-image: url(img/hero_billede.webp);
+        background-repeat: no-repeat;
+        background-size: cover;
       }
 
       button {
