--- a/src/kurv.html
+++ b/src/kurv.html
@@ -113,7 +113,11 @@
       }
 
       @media (min-width: 900px) {
-        button {
+        .overskrift {
+          font-size: var(--h4-desktop);
+        }
+        .secondary button,
+        .primary button {
           font-size: var(--button-desktop);
           padding: 15px 60px;
           border-radius: var(--radius-desktop);
@@ -147,19 +151,21 @@
     </style>
   </head>
   <body>
-    <main>
+    <main class="pb-xxl-spacing-mobile lg:pb-xl-spacing-desktop">
       <section>
         <div>
           <h1
-            class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile"
+            class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop"
           >
             Din Kurv
           </h1>
         </div>
-        <article class="grid place-content-center pb-m-spacing-mobile">
+        <article
+          class="grid place-content-center pb-m-spacing-mobile lg:pb-m-spacing-desktop"
+        >
           <div class="full_bar">
             <div>
-              <p class="overskrift -ml-2">Kurv</p>
+              <p class="overskrift -ml-2 lg:-ml-3">Kurv</p>
               <div class="bar1">
                 <div class="ball1">
                   <p>1</p>
@@ -169,7 +175,7 @@
             </div>
 
             <div>
-              <p class="overskrift -ml-1.5">Info</p>
+              <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
               <div class="bar2">
                 <div class="ball2">
                   <p>2</p>
@@ -178,7 +184,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-2">Betal</p>
+              <p class="overskrift -ml-2 lg:-ml-5">Betal</p>
               <div class="bar3">
                 <div class="ball3">
                   <p>3</p>
@@ -187,7 +193,7 @@
               </div>
             </div>
             <div>
-              <p class="overskrift -ml-4">Bekræft</p>
+              <p class="overskrift -ml-4 lg:-ml-9">Bekræft</p>
               <div class="bar4">
                 <div class="ball4">
                   <p>4</p>
@@ -197,63 +203,93 @@
           </div>
         </article>
         <div>
-          <h3 class="pb-l-spacing-mobile text-center text-h3-mobile">
+          <h3
+            class="pb-l-spacing-mobile text-center text-h3-mobile lg:pb-l-spacing-desktop"
+          >
             Abonnement Oplysninger
           </h3>
         </div>
         <section class="lg:flex">
-          <article class="pb-xxl-spacing-mobile">
+          <article class="pb-xxl-spacing-mobile lg:pb-xxl-spacing-desktop">
             <div class="">
-              <img src="img/abonnement_filler.webp" alt="" />
+              <img class="-ml-10" src="img/abonnement_filler.webp" alt="" />
             </div>
           </article>
 
           <article>
-            <div class="rounded-radius-mobile border-2 border-color-headings">
+            <div
+              class="rounded-radius-mobile border-2 border-color-headings lg:w-[600px] lg:border-none"
+            >
               <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile"
+                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
               >
-                <h4 class="font-other-headings text-h4-mobile">Stil</h4>
-                <p class="my-auto font-font-body text-body-mobile">
+                <h4
+                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
+                >
+                  Stil
+                </h4>
+                <p
+                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+                >
                   Neutral og tæt
                 </p>
               </div>
               <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile"
+                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
               >
-                <h4 class="font-other-headings text-h4-mobile">
+                <h4
+                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
+                >
                   Sensitiv ja/nej
                 </h4>
-                <p class="my-auto font-font-body text-body-mobile">Nej</p>
+                <p
+                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+                >
+                  Nej
+                </p>
               </div>
               <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile"
+                class="px-s-spacing-mobil flex justify-between py-l-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
               >
-                <h4 class="font-other-headings text-h4-mobile">Hyppighed</h4>
-                <p class="my-auto font-font-body text-body-mobile">
+                <h4
+                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
+                >
+                  Hyppighed
+                </h4>
+                <p
+                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+                >
                   Hver anden uge
                 </p>
               </div>
               <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile"
+                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
               >
-                <h4 class="font-other-headings text-h4-mobile">Størrelse</h4>
-                <p class="my-auto font-font-body text-body-mobile">Lille</p>
-              </div>
-              <div
-                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile"
-              >
-                <h4 class="font-other-headings text-h4-mobile">Størrelse</h4>
-                <p class="my-auto font-font-body text-body-mobile">Lille</p>
+                <h4
+                  class="font-other-headings text-h4-mobile lg:text-h4-desktop"
+                >
+                  Subtotal
+                </h4>
+                <p
+                  class="my-auto font-font-body text-body-mobile lg:text-body-desktop"
+                >
+                  620 kr
+                </p>
               </div>
             </div>
 
-            <div class="flex gap-32 pt-xl-spacing-mobile">
+            <div
+              class="flex justify-between pt-xl-spacing-mobile lg:justify-evenly lg:pt-xl-spacing-desktop"
+            >
               <div class="secondary">
-                <button><a href="">Rediger</a></button>
+                <button class="mx-auto">
+                  <a href="abonnement.html">Rediger</a>
+                </button>
               </div>
               <div class="primary">
-                <button>Videre</button>
+                <button class="mx-auto">
+                  <a href="information.html">Videre</a>
+                </button>
               </div>
             </div>
           </article>
