--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -13,129 +13,97 @@
     />
     <link rel="stylesheet" href="style.css" />
     <style>
-      /* MOBILE */
-      article {
-        background-color: var(--footer-background1);
-        padding-top: var(--xl-spacing-mobile);
-        text-align: center;
-      }
-
-      .adresser {
-        text-align: left;
-        margin-left: auto;
-        margin-right: auto;
-        display: grid;
-        gap: var(--l-spacing-mobile);
-      }
-
-      article p,
-      article a {
-        color: var(--background-color);
-        font-family: var(--font-body);
-        font-size: var(--body-mobile);
-      }
-
-      .ikoner {
+      button {
+        background-color: var(--color-primary-button-background);
+        color: var(--color-primary-button-text);
+        font-family: var(--button-text);
+        font-weight: var(--font-weight-semibold);
+        font-size: var(--button-mobile);
+        padding: 15px 40px;
+        border: none;
+        box-shadow: var(--shadow);
         display: flex;
-        gap: var(--m-spacing-mobile);
-        place-content: center;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        border-radius: var(--radius-mobile);
+        max-width: 50%;
+        height: 60px;
+        gap: 10px;
+      }
+      button:hover {
+        background-color: var(--color-primary-button-hover-background);
+      }
+      @media (min-width: 900px) {
+        button {
+          font-size: var(--button-desktop);
+          padding: 15px 60px;
+          border-radius: var(--radius-desktop);
+        }
       }
 
-      .folgosher h4 {
+      .article {
+        background-color: var(--regnorm-100);
+        border: 2px solid black;
+        min-width: 380px;
+
+        border-radius: var(--xs-radius);
+        padding: var(--l-spacing-mobile);
+      }
+      .ikon {
+        display: grid;
+        justify-content: center;
+        padding-top: var(--l-spacing-mobile);
+      }
+      .img {
+        width: 80px;
+        min-height: 80px;
+      }
+
+      .h4 {
+        font-family: var(--other-headings);
+        font-size: var(--h4-mobile);
+        padding-top: var(--l-spacing-mobile);
         padding-bottom: var(--l-spacing-mobile);
       }
-
-      h4 {
-        font-size: var(--h4-mobile);
-        color: var(--background-color);
+      .tekst {
         font-family: var(--font-body);
+        font-size: var(--body-mobile);
+        padding-bottom: var(--l-spacing-mobile);
       }
-
-      .butikker,
-      .informationer,
-      .abningstider {
+      .progress {
         display: grid;
-        gap: var(--l-spacing-mobile);
-      }
-
-      .dage,
-      .tidspunkter {
-        display: grid;
-        gap: var(--l-spacing-mobile);
-      }
-
-      .tider {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-      }
-
-      .butikker,
-      .informationer,
-      .abningstider,
-      .folgosher {
-        padding-bottom: var(--xxl-spacing-mobile);
-      }
-
-      .nederst {
-        background-color: var(--footer-background2);
-        display: grid;
-        gap: var(--l-spacing-mobile);
-        padding-bottom: var(--xl-spacing-mobile);
-        padding-top: var(--l-spacing-mobile);
+        place-content: center;
       }
 
       /* DESKTOP */
 
       @media (min-width: 900px) {
-        .desktop {
-          display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          padding-bottom: var(--xxl-spacing-desktop);
-        }
-
-        article {
-          padding-top: var(--xl-spacing-desktop);
-        }
-
-        .butikker,
-        .informationer,
-        .abningstider {
-          display: grid;
-          gap: var(--l-spacing-desktop);
-        }
-
-        .dage,
-        .tidspunker {
-          display: grid;
-          gap: var(--m-spacing-desktop);
-        }
-
-        .folgosher {
-          grid-column: 2;
-          padding-top: var(--xxl-spacing-desktop);
-        }
-
-        .butikker,
-        .informationer,
-        .abningstider,
-        .folgosher {
-          padding-bottom: 0;
-        }
-
-        article p,
-        article a {
-          font-family: var(--font-body);
-          font-size: var(--body-desktop);
-        }
-
-        h4 {
-          font-size: var(--h5-desktop);
-        }
-
-        .nederst {
+        .article {
           display: flex;
-          justify-content: space-around;
-          align-items: center;
+          max-width: 550px;
+          height: 300px;
+          padding: var(--l-spacing-desktop);
+        }
+        .ikon {
+          display: flex;
+          place-items: center;
+        }
+        .img {
+          max-width: 100px;
+          height: 100px;
+        }
+        .h4 {
+          font-size: var(--h4-desktop);
+          padding-top: var(--xl-spacing-desktop);
+          padding-bottom: var(--l-spacing-desktop);
+        }
+        .tekst {
+          font-size: var(--body-desktop);
+          padding-left: var(--l-spacing-desktop);
+        }
+        .progress {
+          display: none;
         }
       }
     </style>
@@ -144,45 +112,177 @@
     <header>
       <a href="kurv.html">KURV</a>
     </header>
-    <main>
-      <div>
-        <p>Køb dine blomster i vores butikker</p>
-        <p>Bestil dit abonnement på vores webshop</p>
+    <div
+      class="grid pb-10 text-center font-font-body text-abonnement-text-info"
+    >
+      <p>Køb dine blomster i vores butikker</p>
+      <p>Bestil dit abonnement på vores webshop</p>
+    </div>
+
+    <!---------------------------------------------- HERO -->
+    <section class="bg-hero_image pt-l-spacing-mobile text-center">
+      <div
+        class="mx-10 border-2 border-sol pt-m-spacing-mobile pl-10 pr-10 text-sol"
+      >
+        <h1 class="font-main-heading text-h1-mobile">Abonnement</h1>
+        <p class="pt-s-spacing-mobile font-font-body text-h5-mobile">
+          Et udvalg af blomster leveret til din dør
+        </p>
+        <p
+          class="pt-xs-spacing-mobile pb-m-spacing-mobile font-font-body text-body-mobile"
+        >
+          Med et blomsterabonnement kan du nyde et udvalg af årstidens blomster
+          leveret direkte til din hoveddør*
+        </p>
       </div>
-
-      <!---------------------------------------------- HERO -->
-      <section class="">
-        <div class="">
-          <h1 class="">Abonnement</h1>
-          <p>Et udvalg af blomster leveret til din dør</p>
-          <p>
-            Med et blomsterabonnement kan du nyde et udvalg af årstidens
-            blomster leveret direkte til din hoveddør*
-          </p>
-        </div>
-        <div class="">
-          <svg class="pil" width="32" height="32" viewBox="0 0 24 24">
-            <path
-              fill="currentColor"
-              d="m20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8l8-8z"
-            ></path>
-          </svg>
-        </div>
-      </section>
-
+      <div class="py-s-spacing-mobile">
+        <svg
+          class="mx-auto grid text-sol"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+        >
+          <path
+            fill="currentColor"
+            d="m20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8l8-8z"
+          ></path>
+        </svg>
+      </div>
+    </section>
+    <main>
       <!---------------------------------------------- FØRSTE SEKTION -->
       <section>
-        <h2>Sådan fungerer det</h2>
-        <article></article>
+        <h2
+          class="pt-xxl-spacing-mobile pb-xl-spacing-mobile text-center font-other-headings text-h2-mobile"
+        >
+          Sådan fungerer det
+        </h2>
+
+        <!------------------------------- SÅDAN GØR DU -->
+        <article
+          class="flex gap-xxxl-spacing-mobile overflow-x-scroll lg:grid lg:overflow-x-auto"
+        >
+          <div class="article">
+            <div class="ikon">
+              <img class="img" src="img/ikoner/blomst_ikon.svg" alt="" />
+            </div>
+            <div class="info">
+              <div><h3 class="h4">1. Vælg din buket</h3></div>
+              <div>
+                <p class="tekst">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation
+                </p>
+              </div>
+            </div>
+            <div class="progress">
+              <div>
+                <ProgressBarCard />
+              </div>
+            </div>
+          </div>
+
+          <div class="article">
+            <div class="ikon">
+              <img class="img" src="img/ikoner/shoppingcart_ikon.svg" alt="" />
+            </div>
+            <div class="info">
+              <div><h3 class="h4">2. Tilføj til kurv</h3></div>
+              <div>
+                <p class="tekst">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation
+                </p>
+              </div>
+            </div>
+            <div class="progress">
+              <div>
+                <ProgressBarCard />
+              </div>
+            </div>
+          </div>
+
+          <div class="article">
+            <div class="ikon">
+              <img class="img" src="img/ikoner/levering_ikon.svg" alt="" />
+            </div>
+            <div class="info">
+              <div><h3 class="h4">3. Din buket bliver sendt</h3></div>
+              <div>
+                <p class="tekst">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation
+                </p>
+              </div>
+            </div>
+            <div class="progress">
+              <div>
+                <ProgressBarCard />
+              </div>
+            </div>
+          </div>
+
+          <div class="article">
+            <div class="ikon">
+              <img class="img" src="img/ikoner/lokation_ikon.svg" alt="" />
+            </div>
+            <div class="info">
+              <div><h3 class="h4">4. Buketten bliver leveret</h3></div>
+              <div>
+                <p class="tekst">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation
+                </p>
+              </div>
+            </div>
+            <div class="progress">
+              <div>
+                <ProgressBarCard />
+              </div>
+            </div>
+          </div>
+        </article>
+
+        <!------------------------------- KNAP -->
+
+        <button class="mx-auto mt-xl-spacing-mobile">
+          Tegn mit abonnement
+        </button>
+
+        <!------------------------------- KNAP -->
+        <article class="mt-xl-spacing-mobile">
+          <p class="mx-auto font-font-body text-abonnement-text-info">
+            *Udlevering vil finde sted om torsdagen inden for arbejdstiden. Du
+            vil blive opkrævet en engangsbetaling på 20 DKK. depositum for
+            leveringsspanden.
+          </p>
+          <p class="mx-auto font-font-body text-abonnement-text-info">
+            * Billederne er blot en repræsentation af, hvad spanden kunne
+            indeholde til prisen. Typerne af blomster kan variere afhængigt af
+            sæsonen.
+          </p>
+        </article>
       </section>
     </main>
-    <footer>
-      <article>
-        <div class="desktop">
-          <section class="butikker">
-            <h4>BUTIKKER</h4>
 
-            <div class="adresser">
+    <!--------------------------------------------------------------------- FOOTER -->
+    <footer
+      class="font-font-body text-body-mobile text-background-color lg:text-body-desktop"
+    >
+      <article
+        class="bg-footer-background1 pt-xl-spacing-mobile text-center lg:pt-xl-spacing-desktop"
+      >
+        <div class="desktop lg:grid lg:grid-cols-3 lg:pb-xxl-spacing-desktop">
+          <section
+            class="butikker grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
+          >
+            <h4 class="text-h4-mobile lg:text-h4-desktop">BUTIKKER</h4>
+
+            <div class="adresser mx-auto grid gap-l-spacing-mobile text-left">
               <div class="strandvejen">
                 <p>Strandvejen 167</p>
                 <p>2900 Hellerup</p>
@@ -209,8 +309,10 @@
             </div>
           </section>
 
-          <section class="informationer">
-            <h4>INFORMATIONER</h4>
+          <section
+            class="informationer grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
+          >
+            <h4 class="text-h4-mobile lg:text-h4-desktop">INFORMATIONER</h4>
             <div>
               <a href="#">Om os</a>
             </div>
@@ -222,10 +324,14 @@
             </div>
           </section>
 
-          <section class="abningstider">
-            <h4>ÅBNINGSTIDER</h4>
-            <div class="tider">
-              <div class="dage">
+          <section
+            class="abningstider grid gap-l-spacing-mobile pb-xxl-spacing-mobile lg:grid lg:gap-l-spacing-desktop lg:pb-0"
+          >
+            <h4 class="text-h4-mobile lg:text-h4-desktop">ÅBNINGSTIDER</h4>
+            <div class="tider grid grid-cols-2">
+              <div
+                class="dage grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
+              >
                 <p>Mandag</p>
                 <p>Tirsdag</p>
                 <p>Onsdag</p>
@@ -234,7 +340,9 @@
                 <p>Lørdag</p>
                 <p>Søndag</p>
               </div>
-              <div class="tidspunkter">
+              <div
+                class="tidspunkter grid gap-l-spacing-mobile lg:grid lg:gap-m-spacing-desktop"
+              >
                 <p>10 - 18</p>
                 <p>10 - 18</p>
                 <p>10 - 18</p>
@@ -246,9 +354,13 @@
             </div>
           </section>
 
-          <section class="folgosher">
-            <h4>FØLG OS HER</h4>
-            <div class="ikoner">
+          <section
+            class="folgosher pb-xxl-spacing-mobile lg:col-start-2 lg:pb-0 lg:pt-xxl-spacing-desktop"
+          >
+            <h4 class="pb-l-spacing-mobile text-h4-mobile lg:text-h4-desktop">
+              FØLG OS HER
+            </h4>
+            <div class="ikoner flex place-content-center gap-m-spacing-mobile">
               <svg width="40" height="40" viewBox="0 0 48 48">
                 <g fill="none" fill-rule="evenodd" clip-rule="evenodd">
                   <path
@@ -278,7 +390,9 @@
           </section>
         </div>
 
-        <section class="nederst">
+        <section
+          class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile"
+        >
           <p>CVR: 35649328</p>
           <a href="#">Cookiepolitik</a>
           <a href="#">Privatlivspolitik</a>
