--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -394,9 +394,9 @@
           class="nederst grid gap-l-spacing-mobile bg-footer-background2 pb-xl-spacing-mobile pt-l-spacing-mobile"
         >
           <p>CVR: 35649328</p>
-          <a href="#">Cookiepolitik</a>
-          <a href="#">Privatlivspolitik</a>
-          <a href="#">Handelsbetingelser</a>
+          <a class="cursor-pointer underline" href="#">Cookiepolitik</a>
+          <a class="cursor-pointer underline" href="#">Privatlivspolitik</a>
+          <a class="cursor-pointer underline" href="#">Handelsbetingelser</a>
         </section>
       </article>
     </footer>
