--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,39 @@
         background-size: cover;
       }
 
-      button {
+      /* button {
         background-color: var(--background-color);
         border: none;
+      } */
+
+      .primary button {
+        background-color: var(--color-primary-button-background);
+        color: var(--color-primary-button-text);
+        font-family: var(--button-text);
+        font-weight: var(--font-weight-semibold);
+        font-size: var(--button-mobile);
+        padding: 15px 40px;
+        border: none;
+        box-shadow: var(--shadow);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        border-radius: var(--radius-mobile);
+        max-width: 50%;
+        height: 50px;
+        gap: 10px;
+      }
+      .primary button:hover {
+        background-color: var(--color-primary-button-hover-background);
+      }
+
+      .article {
+        /* background-color: var(--regnorm-100); */
+        /* border: 2px solid black; */
+        min-width: 380px;
+        /* border-radius: var(--xs-radius); */
+        /* padding: var(--l-spacing-mobile); */
       }
 
       /* farveskift mobil */
@@ -268,6 +298,11 @@
       }
 
       @media (min-width: 900px) {
+        button {
+          font-size: var(--button-desktop);
+          padding: 15px 60px;
+          border-radius: var(--radius-desktop);
+        }
         .navigation_mobil {
           display: none;
         }
@@ -867,18 +902,34 @@
     </header>
     <main>
       <section class="baggrundsbillede">
-        <img src="img/logo/bb_ill_sol.png" alt="" />
-        <h1 class="text-h1-mobile text-sol-300">Bring sæsonnen hjem til dig</h1>
-        <p>
-          Med et abonnement hos Blomster Bjarne får du leveret unikke buketter
-          fra hver sæson.
-        </p>
-        <button>Tegn mit abonnement</button>
+        <img class="pt-s-spacing-mobile" src="img/logo/bb_ill_sol.png" alt="" />
+        <div class="px-16 text-center">
+          <h1 class="pt-s-spacing-mobile text-h1-mobile text-sol-300">
+            Bring sæsonnen hjem til dig
+          </h1>
+          <p
+            class="pt-l-spacing-mobile font-font-body text-body-mobile text-sol-300"
+          >
+            Med et abonnement hos Blomster Bjarne får du leveret unikke buketter
+            fra hver sæson.
+          </p>
+          <div class="primary py-xl-spacing-mobile">
+            <button class="mx-auto">Tegn mit abonnement</button>
+          </div>
+        </div>
       </section>
       <section>
-        <h2>Hvem er vi?</h2>
-        <h5>Hos Blomster Bjarne fejrer vi alt, hvad der er smukt!</h5>
-        <p>
+        <h2
+          class="pt-l-spacing-mobile text-center font-other-headings text-h2-mobile"
+        >
+          Hvem er vi?
+        </h2>
+        <h3
+          class="pt-xl-spacing-mobile text-center font-other-headings text-h5-mobile"
+        >
+          Hos Blomster Bjarne fejrer vi alt, hvad der er smukt!
+        </h3>
+        <p class="pt-l-spacing-mobile font-font-body text-body-mobile">
           Blomster Bjarne udspringer ud fra et kærligt minde om vores
           grundlægger – at sælge blomster er en del af vores DNA. Vores ønske at
           forkæle og lade dig vare en del at dette univers. Kald det et slags
@@ -888,18 +939,47 @@
           hjemmesiden efter netop den vase eller den blomst, der skal være en
           del af dit enestående hjem.
         </p>
-        <button>Se vores udvalg af blomster</button>
+        <div class="primary py-xl-spacing-mobile">
+          <button class="mx-auto">Se vores udvalg af blomster</button>
+        </div>
       </section>
       <section>
         <!-- banner -->
-        <img src="" alt="" />
+        <div class="bg-color-headings">
+          <p
+            class="overflow-hidden font-other-headings text-banner-mobile font-bold italic text-sol-300"
+          >
+            BLOMSTER BJARNE
+          </p>
+        </div>
       </section>
       <section>
-        <img src="img/sollys_ikon.svg" alt="" />
-        <img src="img/sollys_ikon.svg" alt="" />
-        <img src="img/sollys_ikon.svg" alt="" />
-        <img src="img/sollys_ikon.svg" alt="" />
-        <h2>Sæsonens blomster</h2>
+        <div
+          class="flex place-content-center gap-3 pt-xl-spacing-mobile pb-s-spacing-mobile"
+        >
+          <img src="img/ikoner/sollys_ikon.svg" alt="" />
+          <img src="img/ikoner/blad.svg" alt="" />
+          <svg
+            width="46"
+            height="46
+        "
+            viewBox="0 0 512 512"
+          >
+            <path
+              d="M440.5 345.8L408.1 327c11.8-12.3 26-18.2 26.2-18.3 7.5-3 11.4-11.4 8.9-19.1-1.9-5.9-7.4-9.8-13.5-9.8-1.9 0-3.7.4-5.5 1.1-1 .4-24.4 10-41.9 31.2l-96.3-56 96.3-56c17.5 21.2 40.8 30.8 41.9 31.2 1.8.7 3.6 1.1 5.5 1.1 6.1 0 11.6-4 13.5-9.8 2.5-7.7-1.4-16.1-8.9-19.1-.1-.1-14.3-6-26.2-18.3l32.4-18.8c7.2-4.2 9.6-13.4 5.5-20.6-2.7-4.7-7.7-7.6-13.1-7.6-2.6 0-5.3.7-7.6 2L393.1 159c-4.5-16.2-2.7-31.4-2.6-32 1.1-8.1-4.1-15.6-12-17.3-1-.2-2-.3-3-.3-7.1 0-13 5.2-14.1 12.4-.2 1.1-3.6 26 6.1 52.2l-96 56v-99.2c26.9-4.7 46.8-20.2 47.7-20.9 3.1-2.5 5.1-6 5.4-10 .3-4-.9-7.8-3.6-10.8-2.9-3.2-7-5.1-11.4-5.1-3.4 0-6.8 1.2-9.5 3.3-.1.1-12.2 9.4-28.6 13.6V63.1c0-8.2-7.1-15.1-15.5-15.1s-15.5 6.9-15.5 15.1v37.5c-16.3-4.2-28.4-13.5-28.6-13.6-2.7-2.1-6-3.3-9.5-3.3-4.4 0-8.5 1.9-11.4 5.1-2.7 3-4 7-3.6 10.9.3 3.9 2.3 7.4 5.4 9.9.9.7 20.8 16.2 47.7 20.9v99.2l-96-56c9.6-26 6.2-51.1 6-52.2-1-7.2-6.9-12.4-14-12.4-1 0-2 .1-3 .3-7.9 1.6-13.2 9.3-12 17.3 0 .2 2 15.5-2.6 31.9L86.6 140c-2.3-1.3-4.9-2-7.6-2-5.4 0-10.4 2.9-13.1 7.6-4.1 7.2-1.7 16.5 5.5 20.6l32.4 18.8c-11.7 12.1-25.7 18.1-26.2 18.3-7.5 3-11.4 11.4-8.9 19.1 1.9 5.9 7.4 9.8 13.5 9.8 1.9 0 3.7-.4 5.5-1.1 1-.4 24.4-10 41.9-31.2l96.3 56-96.3 56c-17.5-21.2-40.8-30.8-41.9-31.2-1.8-.7-3.6-1.1-5.5-1.1-6.1 0-11.6 4-13.5 9.8-2.5 7.7 1.4 16 8.9 19.1.5.2 14.5 6.2 26.2 18.3l-32.4 18.8c-7.2 4.2-9.6 13.4-5.5 20.6 2.7 4.7 7.7 7.6 13.1 7.6 2.6 0 5.3-.7 7.6-2l32.3-18.8c4.6 16.5 2.6 31.8 2.6 32-1.2 8 4.1 15.7 12 17.3 1 .2 2 .3 3 .3 7.1 0 13-5.2 14.1-12.4.2-1.1 3.6-26-6.1-52.2l96-56v99.2c-26.9 4.7-46.8 20.2-47.7 20.9-3.1 2.5-5.1 6-5.4 10-.3 4 .9 7.8 3.6 10.8 2.9 3.2 7 5.1 11.4 5.1 3.4 0 6.8-1.2 9.5-3.3.1-.1 12.3-9.4 28.6-13.6v37.5c0 8.2 7.1 15.1 15.5 15.1s15.5-6.9 15.5-15.1v-37.5c16.3 4.2 28.4 13.5 28.6 13.6 2.7 2.1 6.1 3.3 9.5 3.3 4.4 0 8.5-1.9 11.4-5.1 2.7-3 4-7 3.6-10.9-.3-3.9-2.3-7.4-5.4-9.9-.9-.7-20.8-16.2-47.7-20.9V282l96 56c-9.6 26-6.2 51.1-6 52.2 1 7.2 6.9 12.4 14 12.4 1 0 2-.1 3-.3 7.9-1.6 13.1-9.2 12-17.3-.1-.5-1.9-15.7 2.6-32l32.2 18.8c2.3 1.3 4.9 2 7.6 2 5.4 0 10.4-2.9 13.1-7.6 4.1-6.9 1.7-16.2-5.5-20.4z"
+              fill="#00000"
+            />
+          </svg>
+          <img src="img/ikoner/blomst_ikon.svg" alt="" />
+        </div>
+        <div
+          class="mx-24 rounded-radius-mobile border-2 border-b-color-headings"
+        ></div>
+        <h2
+          class="pt-xl-spacing-mobile text-center font-other-headings text-h2-mobile"
+        >
+          Sæsonens blomster
+        </h2>
 
         <!-- Card forside -->
         <article>
@@ -937,16 +1017,139 @@
             </div>
           </div>
         </article>
-        <button>Udforsk sortimentet</button>
-        <h2>Testimonials</h2>
-        <!-- stjerner -->
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <p>
-          “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor ”
-        </p>
+        <div class="primary py-xl-spacing-mobile">
+          <button class="mx-auto">Udforsk sortimentet</button>
+        </div>
+
+        <h2
+          class="pt-xl-spacing-mobile text-center font-other-headings text-h2-mobile"
+        >
+          Testimonials
+        </h2>
+        <article class="flex overflow-x-scroll pb-xxl-spacing-mobile">
+          <div class="article">
+            <div class="flex justify-center gap-3 py-l-spacing-mobile">
+              <svg width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#edc551"
+                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
+                />
+              </svg>
+              <svg width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#edc551"
+                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
+                />
+              </svg>
+              <svg width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#edc551"
+                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
+                />
+              </svg>
+            </div>
+            <div class="flex gap-[36px] px-l-spacing-mobile">
+              <svg width="30" height="30" viewBox="0 0 24 24">
+                <path
+                  fill="#888888"
+                  d="M9.125 21.1L.7 12.7q-.15-.15-.212-.325Q.425 12.2.425 12t.063-.375Q.55 11.45.7 11.3l8.425-8.425q.35-.35.875-.35t.9.375q.375.375.375.875t-.375.875L3.55 12l7.35 7.35q.35.35.35.862q0 .513-.375.888t-.875.375q-.5 0-.875-.375Z"
+                />
+              </svg>
+              <p class="text-center font-font-body text-body-mobile">
+                “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor ”
+              </p>
+              <svg
+                class="rotate-180"
+                width="30"
+                height="30"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  fill="#888888"
+                  d="M9.125 21.1L.7 12.7q-.15-.15-.212-.325Q.425 12.2.425 12t.063-.375Q.55 11.45.7 11.3l8.425-8.425q.35-.35.875-.35t.9.375q.375.375.375.875t-.375.875L3.55 12l7.35 7.35q.35.35.35.862q0 .513-.375.888t-.875.375q-.5 0-.875-.375Z"
+                />
+              </svg>
+            </div>
+            <div>
+              <p
+                class="pt-l-spacing-mobile text-right font-font-body text-body-mobile"
+              >
+                Peter Nielsen
+              </p>
+            </div>
+          </div>
+          <div class="article">
+            <div class="flex justify-center gap-3 py-l-spacing-mobile">
+              <svg width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#edc551"
+                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
+                />
+              </svg>
+              <svg width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#edc551"
+                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
+                />
+              </svg>
+              <svg width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#edc551"
+                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
+                />
+              </svg>
+            </div>
+            <div>
+              <p class="text-center font-font-body text-body-mobile">
+                “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor ”
+              </p>
+            </div>
+            <div>
+              <p
+                class="pt-l-spacing-mobile text-right font-font-body text-body-mobile"
+              >
+                Peter Nielsen
+              </p>
+            </div>
+          </div>
+          <div class="article">
+            <div class="flex justify-center gap-3 py-l-spacing-mobile">
+              <svg width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#edc551"
+                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
+                />
+              </svg>
+              <svg width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#edc551"
+                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
+                />
+              </svg>
+              <svg width="32" height="32" viewBox="0 0 24 24">
+                <path
+                  fill="#edc551"
+                  d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2L9.19 8.63L2 9.24l5.46 4.73L5.82 21L12 17.27z"
+                />
+              </svg>
+            </div>
+            <div>
+              <p class="text-center font-font-body text-body-mobile">
+                “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor ”
+              </p>
+            </div>
+            <div>
+              <p
+                class="pt-l-spacing-mobile text-right font-font-body text-body-mobile"
+              >
+                Peter Nielsen
+              </p>
+            </div>
+          </div>
+        </article>
       </section>
     </main>
     <footer></footer>
