--- a/src/abonnement.html
+++ b/src/abonnement.html
@@ -120,7 +120,7 @@
     </div>
 
     <!---------------------------------------------- HERO -->
-    <section class="bg-hero_image pt-l-spacing-mobile text-center">
+    <section class="bg-hero_image bg-cover pt-l-spacing-mobile text-center">
       <div
         class="mx-10 border-2 border-sol pt-m-spacing-mobile pl-10 pr-10 text-sol"
       >
@@ -160,7 +160,7 @@
 
         <!------------------------------- SÅDAN GØR DU -->
         <article
-          class="flex gap-xxxl-spacing-mobile overflow-x-scroll lg:grid lg:overflow-x-auto"
+          class="scroll- flex gap-xxxl-spacing-mobile overflow-x-scroll lg:grid lg:overflow-x-auto"
         >
           <div class="article">
             <div class="ikon">
@@ -249,9 +249,11 @@
 
         <!------------------------------- KNAP -->
 
-        <button class="mx-auto mt-xl-spacing-mobile">
-          Tegn mit abonnement
-        </button>
+        <a href="abonnement1.html"
+          ><button class="mx-auto mt-xl-spacing-mobile">
+            Tegn mit abonnement
+          </button></a
+        >
 
         <!------------------------------- KNAP -->
         <article class="mt-xl-spacing-mobile">
