--- a/src/kurv.html
+++ b/src/kurv.html
@@ -83,7 +83,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        border-radius: var(--xs-radius);
+        border-radius: var(--radius-mobile);
 
         gap: 10px;
       }
@@ -155,7 +155,7 @@
       <section>
         <div>
           <h1
-            class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop"
+            class="py-xl-spacing-mobile text-center font-main-heading text-h1-mobile lg:py-xl-spacing-desktop lg:text-h1-desktop"
           >
             Din Kurv
           </h1>
@@ -168,7 +168,7 @@
               <p class="overskrift -ml-2 lg:-ml-3">Kurv</p>
               <div class="bar1">
                 <div class="ball1">
-                  <p>1</p>
+                  <a href="kurv.html"><p>1</p></a>
                 </div>
                 <div class="line1"></div>
               </div>
@@ -178,7 +178,7 @@
               <p class="overskrift -ml-1.5 lg:-ml-2">Info</p>
               <div class="bar2">
                 <div class="ball2">
-                  <p>2</p>
+                  <a href="information.html"><p>2</p></a>
                 </div>
                 <div class="line2"></div>
               </div>
@@ -249,7 +249,7 @@
                 </p>
               </div>
               <div
-                class="px-s-spacing-mobil flex justify-between py-l-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
+                class="flex justify-between py-l-spacing-mobile px-s-spacing-mobile lg:px-s-spacing-desktop lg:py-l-spacing-desktop"
               >
                 <h4
                   class="font-other-headings text-h4-mobile lg:text-h4-desktop"
