--- a/src/information.html
+++ b/src/information.html
@@ -155,7 +155,7 @@
     </style>
   </head>
   <body>
-    <main>
+    <main class="pb-xxl-spacing-mobile lg:pb-xl-spacing-desktop">
       <section>
         <article>
           <div>
@@ -211,7 +211,10 @@
       </section>
       <section class="pt-xxl-spacing-mobile lg:pt-l-spacing-desktop">
         <article class="">
-          <form class="lg:flex lg:justify-around" action="udfyld">
+          <form
+            class="lg:flex lg:justify-around lg:pb-xl-spacing-desktop"
+            action="udfyld"
+          >
             <div class="">
               <div class="pb-m-spacing-mobile lg:pb-l-spacing-desktop">
                 <h4
@@ -294,7 +297,7 @@
               </div>
               <div>
                 <h5
-                  class="pb-xs-spacing-mobile font-font-body text-h5-mobile lg:text-h5-desktop"
+                  class="pb-xs-spacing-mobile font-font-body text-h5-mobile lg:pb-s-spacing-desktop lg:text-h5-desktop"
                 >
                   Vil du have besked, når der er leveret?
                 </h5>
